--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
+  },
+  "devDependencies": {
+    "path": "^0.12.7"
   }
 }
